大幅強化pickemojibyanme，為擴充鋪路。

--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@ const seedRecipes = {
   '水+土':['泥',['🟤']],
   '河+石頭':['沙',['🏜️']],
   '海+樹':['珊瑚',['🪸']],
+  '熔爐+雜金屬':['純金屬',['⚙️']],
   '水+泥':['泥漿',['🟤','💧']],
   '水+沙':['泥漿',['🟤','💧']],
   '風+沙':['沙塵暴',['💨','🪨']],
@@ -204,13 +205,13 @@ const seedRecipes = {
   '湖+湖':['海',['🌊']],
   '泥+光':['細胞',['🦠']],
   '細胞+細胞':['生命',['🌱']],
-  '金屬+風':['電',['⚡']],
+  '雜金屬+風':['電',['⚡']],
   '火+土':['磚',['🧱']],
   '火+泥':['黏土',['🟤','🪨']],
   '火+黏土':['水泥',['🧱','🪨']],
   '火+水':['蒸氣',['💨']],
   '土+土':['石頭',['🪨']],
-  '石頭+火':['金屬',['⚙️']],
+  '石頭+火':['雜金屬',['⚙️']],
   '風+火':['煙',['🌫️']],
   '風+水':['雲',['☁️']],
   '雲+風':['天空',['🌈']],
@@ -226,14 +227,15 @@ const seedRecipes = {
   '電+水': ['電解水',['⚡','💧']],
   '植物+雨':['花朵',['🌸']],
   '植物+水':['水生植物',['💧','🌿']],
-  '金屬+電':['機器',['🤖']],
+  '雜金屬+電':['低階機器',['🤖']],
+  '純金屬+電':['高階機器',['🤖']],
   '水+時間':['冰',['🧊']],
   '水+冰':['雪',['❄️']],
-  '火+金屬':['熔爐',['🔥','🏭']],
+  '火+雜金屬':['熔爐',['🔥','🏭']],
   '生命+水':['魚',['🐟']],
   '魚+電':['電鰻',['🐟','⚡']],
   '土+時間':['化石',['🦴']],
-  '生命+金屬':['賽博',['🧬','🤖']]
+  '生命+純金屬':['賽博',['🧬','🤖']]
 };
 
 // 在 seedRecipes 後面加
@@ -248,31 +250,107 @@ for (const [k, v] of Object.entries(seedRecipes)) {
   const [name, emoji] = v;                 // v 形如 ['泥', ['🟤']]
   resultEmojiMap[name] = Array.isArray(emoji) ? emoji : [emoji];
 }
+      const rules = [
+    [/黑洞|宇宙|銀河|星系|行星|恆星|星|彗星/, ['🪐']],
+    [/水|泉|雨|滴/, ['💧']],
+    [/海|潮|浪|洋/, ['🌊']],
+    [/河|湖/, ['🏞️']],             
+    [/樹|林|木|森|松|柏/, ['🌲']],
+    [/花|瓣|櫻|梅|菊|蓮|蘭/, ['🌸']],
+    [/蟲|幼蟲/, ['🐛']],
+    [/蝶/, ['🦋']],
+    [/甲蟲|鍬形蟲|金龜子/, ['🪲']],
+    [/蜂/, ['🐝']],
+    [/螞蟻|蟻/, ['🐜']],
+    [/蚊/, ['🦟']],
+    [/瓢蟲/, ['🐞']],
+    [/磁|磁鐵|磁場/, ['🧲']],
+    [/冰|結冰/, ['🧊']],
+    [/雪|霜|寒/, ['❄️']], 
+    [/火|炎|焰|熔|熱|熾|燄/, ['🔥']],
+    [/電|雷|閃電|電擊/, ['⚡']],
+    [/果|蘋果/, ['🍎']],
+    [/葡萄/, ['🍇']],
+    [/鳥|鷹|隼/, ['🦅']],
+    [/鴨|鵝|雁/, ['🦆']],
+    [/蛇|蟒/, ['🐍']],
+    [/龜|海龜/, ['🐢']],
+    [/蜥|蜥蜴/, ['🦎']],
+    [/蛙|青蛙|蟾蜍/, ['🐸']],
+    [/鶴/, ['🐦']],
+    [/鴿/, ['🕊️']],
+    [/雞|雛/, ['🐔']],
+    [/孔雀/, ['🦚']],
+    [/企鵝/, ['🐧']],
+    [/蕉/, ['🍌']],
+    [/橙|橘|柑/, ['🍊']],
+    [/莓/, ['🍓']],
+    [/風|颶|飄|氣|霧|煙/, ['💨']],
+    [/土|地|砂|石|山|岩|礦|磚|泥|塵/, ['🪨']],
+    [/金屬|金|鋼|鐵|銅|銀|機|齒|械|裝甲|裝備/, ['⚙️']],
+    [/馬|駒/, ['🐎']],
+    [/牛|犢/, ['🐂']],
+    [/羊|羔/, ['🐑']],
+    [/豬|豚/, ['🐖']],
+    [/犬|狗|獵犬|狼/, ['🐺']],
+    [/貓|獅|虎|豹/, ['🐈']],
+    [/熊/, ['🐻']],
+    [/猴|猿/, ['🐒']],
+    [/蝙蝠/, ['🦇']],
+    [/兔/, ['🐇']],
+    [/象|長鼻/, ['🐘']],
+    [/時間|時|鐘|歲|古|化石|紀元|秒|分/, ['⌛️']],
+    [/龍|獸|怪|神/, ['🐉']],
+    [/怪獸|巨怪|妖/, ['👹']],
+    [/鳳凰|鳳/, ['🐦‍🔥']],
+    [/魚/, ['🐟']],
+    [/鯊/, ['🦈']],
+    [/鯨/, ['🐋']],
+    [/海豚/, ['🐬']],
+    [/章魚/, ['🐙']],
+    [/魷/, ['🦑']],
+    [/蝦/, ['🦐']],
+    [/蟹/, ['🦀']],
+    [/海星/, ['⭐']],
+    [/巫|法師/, ['🧙🏻']],
+    [/靈|魂|魄/, ['👻']],
+    [/魔|咒|幻|術|法|符/, ['🪄']],
+    [/生|生命|植物|草|芽|藤|葉|苗/, ['🌱']],
+    [/劍|刀|刃|短劍|長劍|匕首|武士刀|雙刀|巨劍/, ['🗡️']],
+    [/斧|戰斧|手斧|雙刃斧/, ['🪓']],
+    [/鎚|錘|戰錘|大鎚|榔頭/, ['🔨']],
+    [/弓|弓箭|長弓|短弓|弩|十字弓/, ['🏹']],
+    [/矛|長槍|長矛|標槍|戟|槍刃/, ['🗡️']],
+    [/盾|防盾|護盾/, ['🛡️']],
+    [/飛鏢|手裡劍|擲斧|投石/, ['🎯']],
+    [/手槍|步槍|狙擊槍|獵槍|霰彈槍|槍械/, ['🔫']],
+    [/砲|炮|火砲|大砲|加農炮|迫擊砲/, ['💣']],
+    [/鎬|稿|鎬子|十字鎬|挖礦/, ['⛏️']],
+    [/鏟|鐵鍬|鐵鏟|鏟子|鍬/, ['🧹']], // 沒鏟子emoji暫用掃把
+    [/鋸|鋸子/, ['🪚']],
+    [/扳手|板手|套筒|梅花扳手/, ['🔧']],
+    [/螺絲起子|起子|螺起/, ['🪛']],
+    [/工具箱|工具包/, ['🧰']],
+  ];
     const emojiPool = ['🪐','✨','🧪','🧲','🧠','🎲','🧯','🛰️','🪄','📦','🛸','🧰','🎇','🔮','🗿','🧊','🧱','🌋','🌪️','🌊','🌌','🌈','🪵','🍞','🥚','🍰','🍫','☂️','🎺','⚗️','🧵','🧷','🧫','🪤','📡','🔧','🧭'];
-function pickEmojiByName(name){
-  const rules = [];
-  rules.push([/黑洞|宇宙|銀河|星系|行星|恆星|星|彗星/, ['🪐']]);
-  rules.push([/樹|林|木|森|松|柏/, ['🌲']]);
-  rules.push([/花|瓣|櫻|梅|菊|蓮|蘭/, ['🌸']]);
-  rules.push([/冰|霜|雪|寒|結冰/, ['🧊']]);
-  rules.push([/火|炎|焰|熔|熱|熾|燄/, ['🔥']]);
-  rules.push([/水|海|河|湖|泉|雲|雨|波|潮|蒸氣/, ['💧']]);
-  rules.push([/風|颶|飄|氣|霧|煙|雲/, ['💨']]);
-  rules.push([/土|地|砂|石|山|岩|礦|磚|泥|塵/, ['🪨']]);
-  rules.push([/金屬|金|鋼|鐵|銅|銀|機|齒|械|裝甲|裝備/, ['⚙️']]);
-  rules.push([/電|雷|磁|能|閃電|電擊/, ['⚡']]);
-  rules.push([/時間|時|鐘|歲|古|化石|紀元|秒|分/, ['⌛']]);
-  rules.push([/龍|獸|怪|神|鳳/, ['🐉']]);
-  rules.push([/魚/, ['🐟']]);
-  rules.push([/魔|咒|幻|術|法|符|靈|巫/, ['🪄']]);
-  rules.push([/生|生命|植物|草|芽|藤|果|葉|苗/, ['🌱']]);
+function pickEmojiByName(name) {
+  if (!name) return [randomFrom(emojiPool)];
 
-  for (const it of rules){
-    if (!Array.isArray(it) || it.length !== 2) continue; // 防呆：避免「not iterable」再鬧
-    const [re, e] = it;
-    if (re instanceof RegExp && re.test(name)) return e;
+  name = String(name).toLowerCase();
+  const found = [];
+  for (const [re, arr] of rules) {
+    if (found.length >= 3) break;
+    if (re.test(name)) {
+      const emo = Array.isArray(arr) ? arr[0] : arr;
+      if (!found.includes(emo)) found.push(emo);
+    }
   }
-  return [emojiPool[Math.floor(Math.random()*emojiPool.length)]];
+  return found.length ? found : [randomFrom(emojiPool)];
+}
+
+// 隨機保底
+function randomFrom(arr) {
+  return arr && arr.length ? arr[Math.floor(Math.random() * arr.length)] : '❓';
 }
 
 
@@ -493,23 +571,58 @@ function renderMissions(){
   }
   updateMissionProgress(); 
 }
+//regen toolset
+function getAllElementNames(){
+  // 以「看得到的宇宙」為基礎：配方結果 + 玩家已產生過的結果
+  const set = new Set();
+
+  // 配方結果（正史池）
+  for (const r of Object.values(seedRecipes)) {
+    if (Array.isArray(r) && typeof r[0] === 'string') set.add(r[0]);
+  }
+  // 玩家曾經產生過（包含 new discover）
+  for (const k in (state.known || {})) {
+    const r = state.known[k];
+    if (r && typeof r.name === 'string') set.add(r.name);
+  }
+  return [...set];
+}
+
+function eligibleMissionPool(){
+  const unlocked = new Set(Object.keys(state.unlocked || {}));
+  const current  = new Set((state.missions || []).map(m => m.name));
+  return getAllElementNames().filter(n => !unlocked.has(n) && !current.has(n));
+}
+
+function pickEligibleMission(){
+  const pool = eligibleMissionPool();
+  if (!pool.length) return null;
+  return pool[Math.floor(Math.random() * pool.length)];
+}
+
 
 
 // 替換原本的 regenMissions()
-function regenMissions(){
-  const recipeResults = Object.values(seedRecipes).map(r => r[0]);
-  const uniq = Array.from(new Set(recipeResults))
-    .sort(() => Math.random() - 0.5)
-    .slice(0, 3);
+ // === REPLACE: regenMissions() ===
+function regenMissions(count = 3){
+  state.missions = Array.isArray(state.missions) ? state.missions : [];
 
-  state.missions = uniq.map(n => ({
-    name: n,
-    // 先用已解鎖正史圖示，其次用配方結果索引，最後才猜
-    emoji: Array.isArray(state.unlocked[n]) ? state.unlocked[n]
-         : (resultEmojiMap[n] || pickEmojiByName(n)),
-    done: false
-  }));
+  // 先保留尚未完成的
+  state.missions = state.missions.filter(m => m && !m.done);
+
+  // 補到指定數量，來源只挑「尚未獲得、且不重複現有任務」
+  while (state.missions.length < count) {
+    const next = pickEligibleMission();
+    if (!next) break; // 沒東西可補就停
+    state.missions.push({
+      name: next,
+      emoji: Array.isArray(state.unlocked[next]) ? state.unlocked[next]
+           : (resultEmojiMap[next] || pickEmojiByName(next)),
+      done: false
+    });
+  }
 }
+
 
 
 
@@ -616,10 +729,26 @@ function hardReset(){
 }, 1450);
   setTimeout(() => { if (productToken) productToken.remove(); }, 1700);
   state.history.push({a,b,res});
+for (const m of state.missions) {
+  if (!m.done && m.name === res.name) {
+    m.done = true;
+    toast(`任務完成：${m.name} ${m.emoji.join('')}`);
 
-  for(const m of state.missions){
-    if(!m.done && m.name===res.name){ m.done=true; toast(`任務完成：${m.name} ${m.emoji.join('')}`); }
+    // 立刻換成新的「尚未獲得」任務
+    const next = pickEligibleMission();
+    if (next) {
+      Object.assign(m, {
+        name: next,
+        emoji: Array.isArray(state.unlocked[next]) ? state.unlocked[next]
+             : (resultEmojiMap[next] || pickEmojiByName(next)),
+        done: false
+      });
+    }
   }
+}
+// 依規格：保持任務數量固定
+regenMissions(3);
+
   saveState();
 
   renderBook(); renderHistory(); renderCatalog(searchEl.value.trim()); renderMissions();
