--- a/index.html
+++ b/index.html
@@ -75,19 +75,40 @@
 }
 .token { transition: opacity 0.25s ease; }
 .token.fade-out { opacity: 0; }
+.emoji {font-size: 28px;}
+/* Intro cutscene */
+.intro{position:fixed;inset:0;background:#000;color:#e9eef5;
+  display:flex;align-items:center;justify-content:center;z-index:9999;
+  opacity:1;transition:opacity .8s ease}
+.intro.hidden{display:none}
+.intro.fade{opacity:0}
+.intro-inner{position:relative;max-width:70ch;padding:32px 28px;
+  font-size:18px;line-height:1.75;letter-spacing:.2px}
+.intro-text{white-space:pre-line;text-align:center}
 
-
-.emoji {
-  font-size: 28px;
+/* 視覺雜訊掃描線 */
+.intro .scan{pointer-events:none;position:absolute;inset:-8px;border-radius:8px;
+  background:repeating-linear-gradient( to bottom,
+    rgba(255,255,255,.045) 0, rgba(255,255,255,.045) 1px,
+    transparent 2px, transparent 3px); mix-blend-mode:overlay;
+  animation:introScan 7.5s linear infinite; opacity:.18}
+@keyframes introScan{from{transform:translateY(-100%)}to{transform:translateY(100%)}}
+.intro::after{
+  content:"";
+  position:absolute; inset:0; pointer-events:none; opacity:.10;
+  background-image:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='160' height='160'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.9' numOctaves='3'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23n)'/%3E%3C/svg%3E");
+  animation:introNoise .25s steps(2) infinite;
 }
     /* tiny test panel */
     #testPanel{position:fixed;left:10px;bottom:10px;max-width:44ch;background:#0e1423;border:1px solid #2a3352;color:#cfe2ff;padding:8px 10px;border-radius:10px;box-shadow:var(--glow);font-size:12px;opacity:.9}
     #testPanel summary{cursor:pointer;color:#9cc0ff}
       /* armed reset visual */
     #resetBtn.armed{ border-color:#ff4d4f !important; background:linear-gradient(135deg, rgba(255,77,79,.18), rgba(255,77,79,.08)); color:#ffecec }
+    
   </style>
 </head>
 <body>
+  <audio id="introBgm" src="cosmic.wav" preload="auto"></audio>
   <div class="app">
     <header>
       <h1>Was that Infinite? <span class="pill">Local Prototype</span></h1>
@@ -131,15 +152,22 @@
     </aside>
 
     <footer>
-      <span>本地儲存 v<span id="ver"></span> • 無後端 • 支援 new discover</span>
+      <span>本地儲存 v8.2<span id="ver"></span> • 後端開發中 • 支援 new discover</span>
     </footer>
   </div>
 
   <div id="toast" class="toast"></div>
+<!-- CUTSCENE: Intro -->
+<div id="intro" class="intro hidden">
+  <div class="intro-inner">
+    <div class="scan"></div>
+    <div class="intro-text" id="introText"></div>
+  </div>
+</div>
 
   <script>
     // ---------- Versioning ----------
-    const SAVE_VERSION = 2;
+    const SAVE_VERSION = 8.2;
 
     // ---------- Robust JSON helpers ----------
     function safeParseJSON(raw){
@@ -191,25 +219,37 @@ const firstPool = [
 ];
 const seedRecipes = {
   '水+土':['泥',['🟤']],
+  '火+火':['烈焰',['🔥','🔥']],
+  '水+水':['河',['💧','🌊']],
+  '火+水':['蒸氣',['💨']],
+  '風+風':['颶風',['💨','💨']],
+  '月球+水':['月泉',['🌕','💧']],
   '河+石頭':['沙',['🏜️']],
   '海+樹':['珊瑚',['🪸']],
   '熔爐+雜金屬':['純金屬',['⚙️']],
   '水+泥':['泥漿',['🟤','💧']],
   '水+沙':['泥漿',['🟤','💧']],
   '風+沙':['沙塵暴',['💨','🪨']],
-  '火+煙':['灰燼',['🔥','🌫️']],  
+  '火+煙':['灰燼',['🔥','🌫️']],
+  '灰燼+水':['灰水',['🌫️','💧']],  
   '灰燼+土':['沃壤',['🟫','✨']],
   '沃壤+植物':['作物',['🌾']],
-  '水+水':['河',['💧','🌊']],
   '河+河':['湖',['💧','🏞️']],
   '湖+湖':['海',['🌊']],
   '泥+光':['細胞',['🦠']],
   '細胞+細胞':['生命',['🌱']],
   '雜金屬+風':['電',['⚡']],
+  '風+泥':['泥沙暴',['💨','🟤']],
+  '細胞+水':['水細胞',['🦠','💧']],
+  '細胞+土':['土細胞',['🦠','🟫']],
+  '細胞+風':['風細胞',['🦠','💨']],
+  '水泥+磚':['牆',['🧱','🏗️']],
+  '細胞+火':['火細胞',['🦠','🔥']],
   '火+土':['磚',['🧱']],
   '火+泥':['黏土',['🟤','🪨']],
+  '牆+天空':['天花板',['🏠','⬜']],
+  '天花板+牆':['房間',['🏠','🚪']],
   '火+黏土':['水泥',['🧱','🪨']],
-  '火+水':['蒸氣',['💨']],
   '土+土':['石頭',['🪨']],
   '石頭+火':['雜金屬',['⚙️']],
   '風+火':['煙',['🌫️']],
@@ -651,6 +691,7 @@ function hardReset(){
   } catch {}
   renderAll();
   toast('已重置');
+  try { localStorage.removeItem('iec_seen_intro_v2'); } catch {}
 }
 
 
@@ -828,6 +869,110 @@ document.getElementById('rerollMissions').addEventListener('click', ()=>{
       document.getElementById('ver').textContent = SAVE_VERSION;
     }
     try{ renderAll(); } catch(e){ console.error('render error', e); toast('初始化失敗'); }
+// --- Opening Cutscene: "Was that Infinite?" v1.1 ---
+// 直接貼在你的 <script> 最底下（renderAll() 之後即可）
+
+(function installOpening(){
+  const INTRO_KEY = 'iec_seen_intro_v2';
+  // 已看過就略過
+  try { if (localStorage.getItem(INTRO_KEY)) return; } catch {}
+
+  const intro   = document.getElementById('intro');
+  const textEl  = document.getElementById('introText');
+  if(!intro || !textEl) return;
+
+  const frames = [
+    { t: '在很久以後的某天，一個高等文明的實驗室裡，某次不該失敗的維度展開實驗失敗了。', hold: 850 },
+    { t: '整個三級維度宇宙被壓縮為無數的「元素」。', hold: 1100 },
+    { t: '你和這間破碎的實驗室是唯一沒被化為元素的實體物質。', hold: 900 },
+    { t: '你必須不斷合成，重新拼回維度與宇宙。', hold: 950 },
+    { t: '合成機／操作介面　連線中…', hold: 1200 },
+    { t: '載入基礎元素………載入完成。', hold: 800 },
+    { t: '準備就緒。', hold: 650 },
+  ];
+  const bgm = document.getElementById('introBgm');
+
+  function playBgm(){
+    if (!bgm) return;
+    bgm.currentTime = 0;
+    bgm.volume = 0;
+    bgm.play().catch(()=>{});
+    // 漸入
+    let v = 0;
+    const fade = setInterval(()=>{
+      v += 0.05;
+      if(v >= 0.4){ v = 0.4; clearInterval(fade); }
+      bgm.volume = v;
+    }, 120);
+  }
+
+  function stopBgm(){
+    if (!bgm) return;
+    // 漸出
+    let v = bgm.volume;
+    const fade = setInterval(()=>{
+      v -= 0.05;
+      if(v <= 0){ v = 0; clearInterval(fade); bgm.pause(); }
+      bgm.volume = v;
+    }, 120);
+  }
+
+  // 打字機
+  function typeLine(str, speed = 14){
+    return new Promise(resolve=>{
+      let i = 0, out = '';
+      const id = setInterval(()=>{
+        out += str[i++];
+        textEl.textContent = out;
+        if(i >= str.length){
+          clearInterval(id);
+          resolve();
+        }
+      }, speed);
+    });
+  }
+
+  // 淡入容器
+  function showOverlay(){
+    intro.classList.remove('hidden');
+    // 觸發重繪以啟用過場
+    void intro.offsetHeight;
+    intro.classList.remove('fade');
+  }
+
+  function hideOverlay(){
+    intro.classList.add('fade');
+    setTimeout(()=> intro.classList.add('hidden'), 750);
+  }
+
+  // 執行片頭
+  (async function run(){
+    playBgm();
+    showOverlay();
+    // 小提示（不干擾）
+    try {
+      const hint = document.createElement('div');
+      hint.style.position='absolute';
+      hint.style.bottom='18px';
+      hint.style.left='50%';
+      hint.style.transform='translateX(-50%)';
+      hint.style.fontSize='12px';
+      hint.style.opacity='.65';
+      hint.textContent='點擊或按空白/ESC 跳過';
+      intro.querySelector('.intro-inner')?.appendChild(hint);
+    } catch {}
+
+    for(const f of frames){
+      await typeLine(f.t);
+      await new Promise(r=> setTimeout(r, f.hold||800));
+      textEl.textContent = textEl.textContent + '\n';
+    }
+    try { localStorage.setItem(INTRO_KEY, '1'); } catch {}
+    hideOverlay();
+    stopBgm()
+  })();
+})();
+
   </script>
 </body>
 </html>
