--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
       /* armed reset visual */
     #resetBtn.armed{ border-color:#ff4d4f !important; background:linear-gradient(135deg, rgba(255,77,79,.18), rgba(255,77,79,.08)); color:#ffecec }
     :root{
-  --cursor-normal: url("cursor-normal.png") 8 8, auto;   /* 換你的圖與熱區 */
-  --cursor-drag:   url("cursor-drag.png") 10 10, grabbing;
+  --cursor-normal: url("X-cursor.png") 8 8, auto;   
+  --cursor-drag:   url("X-cursor-drag.png") 10 10, grabbing;
 }
 
 /* 預設游標 */
