效能優化修復

--- a/index.html
+++ b/index.html
@@ -585,23 +585,7 @@ function updateMissionProgress(){
       let i=0; for(const ch of s){ if(ch===n[i]) i++; if(i===n.length) return true; }
       return false;
     }
-
-    function renderCatalog(filter=''){
-  const items = Object.entries(state.unlocked)
-    .map(([n,e]) => ({n,e}))
-    .filter(x => fuzzyMatch(x.n, filter))
-    .sort((a,b) => a.n.localeCompare(b.n,'zh-Hant'));
-  
-  updateCatalogItems(items);
-  
-  // stats - 使用 requestAnimationFrame 避免阻塞
-  requestAnimationFrame(() => {
-    const total = Object.keys(state.unlocked).length;
-    statsPill.textContent = `${total} 項`;
-  });
-}
-
-function updateCatalogItems(items) {
+    function updateCatalogItems(items) {
   const existingCards = new Map();
   
   // 收集現有卡片
@@ -612,17 +596,23 @@ function updateCatalogItems(items) {
   
   // 創建需要的卡片集合
   const neededCards = new Set(items.map(item => item.n));
+  
+  // 移除不需要的卡片
   existingCards.forEach((card, name) => {
     if (!neededCards.has(name)) {
       card.remove();
-      existingCards.delete(name);
     }
   });
+  
+  // 清空容器並重新添加（保持正確順序）
+  catalogEl.innerHTML = '';
   const fragment = document.createDocumentFragment();
+  
   items.forEach(item => {
     let card = existingCards.get(item.n);
     
     if (!card) {
+      // 創建新卡片
       card = makeCard(item.n, item.e);
       card.addEventListener('dragstart', ev => {
         ev.dataTransfer.setData('text/plain', JSON.stringify({name: item.n, emoji: item.e}));
