--- a/index.html
+++ b/index.html
@@ -90,7 +90,10 @@ body {
 .card.tilt-active {
   transition: transform 0.1s ease-out;
 }
-
+.card.dragging {
+  transform: none !important;
+  animation: none !important;
+}
 /* 新增卡片動畫延遲 */
 .card:nth-child(odd) { animation-delay: -1s; }
 .card:nth-child(3n) { animation-delay: -2s; }
@@ -223,7 +226,7 @@ body {
     </aside>
 
     <footer>
-      <span>本地儲存 v8.2<span id="ver"></span> • 後端開發中 • 支援 new discover</span>
+      <span>本地儲存 v9.1<span id="ver"></span> • 後端開發中 • 支援 new discover</span>
     </footer>
   </div>
 
@@ -238,7 +241,7 @@ body {
 
   <script>
     // ---------- Versioning ----------
-    const SAVE_VERSION = 8.2;
+    const SAVE_VERSION = 9.1;
 
     // ---------- Robust JSON helpers ----------
     function safeParseJSON(raw){
@@ -723,13 +726,21 @@ function makeCard(name, emojis, your = false) {
 }
 // 3D 傾斜跟隨效果函數
 function add3DTiltEffect(cardElement) {
+  cardElement.addEventListener('dragstart', () => {
+    cardElement.classList.add('dragging');
+    cardElement.classList.remove('tilt-active');
+  });
+  
+  cardElement.addEventListener('dragend', () => {
+    cardElement.classList.remove('dragging');
+  });
+  
   cardElement.addEventListener('mouseenter', () => {
     cardElement.classList.add('tilt-active');
   });
   
   cardElement.addEventListener('mouseleave', () => {
     cardElement.classList.remove('tilt-active');
-    // 重置為懸浮狀態而非完全重置
     if (cardElement.matches(':hover')) {
       cardElement.style.transform = 'translateY(-8px) rotateX(15deg) scale(1.05)';
     } else {
@@ -758,6 +769,7 @@ function add3DTiltEffect(cardElement) {
     `;
   });
 }
+
 
   
 
@@ -857,7 +869,6 @@ function updateMissionProgress(){
       const s = hay.toLowerCase();
       const n = needle.toLowerCase().trim();
       if(s.includes(n)) return true;
-      // simple subsequence fuzzy: all chars appear in order
       let i=0; for(const ch of s){ if(ch===n[i]) i++; if(i===n.length) return true; }
       return false;
     }
@@ -878,16 +889,15 @@ function updateMissionProgress(){
     function updateCatalogItems(items) {
   const existingCards = new Map();
   
-  // 收集現有卡片
+
   catalogEl.querySelectorAll('.card').forEach(card => {
     const name = card.dataset.name;
     if (name) existingCards.set(name, card);
   });
   
-  // 創建需要的卡片集合
+
   const neededCards = new Set(items.map(item => item.n));
-  
-  // 移除不需要的卡片
+
   existingCards.forEach((card, name) => {
     if (!neededCards.has(name)) {
       card.remove();
@@ -1185,7 +1195,6 @@ document.getElementById('rerollMissions').addEventListener('click', ()=>{
       
       const result = await SafeFile.import(parsed.val);
       if (!result.success) {
-        // 嘗試作為舊格式匯入
         if (validateState(parsed.val)) {
           state = parsed.val; 
           saveState(); 
